src/objects/QIPP_Portfolio__c.object
<CustomObject>
    <description>Custom Object &quot;Portfolio&quot; for the QIPP Application</description>
    <fields>
        <fullName>A3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDT_Lead_Name__c</fullName>
        <description>This field is requried for CDT report</description>
        <label>CDT Lead Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDT_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use directory search or see Portfolio Mgr (Mike Patel) to add new CDT lead</inlineHelpText>
        <label>CDT Lead</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipName>Portfolio1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDT_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use directory search or see Portfolio Mgr (Mike Patel) to add new names to sponsor list</inlineHelpText>
        <label>CDT Sponsor</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPV_Interview_Date__c</fullName>
        <label>CPV Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPV_Reference__c</fullName>
        <label>CPV Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPV_Trend__c</fullName>
        <label>CPV Trend</label>
        <picklist>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPVi_Composite__c</fullName>
        <label>CPVi-Composite</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPVi_Future__c</fullName>
        <label>CPVi-Expectation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPVi_Past__c</fullName>
        <label>CPVi-Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Region__c</fullName>
        <label>Customer Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East &amp; Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DI_CoPQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DI (CoPQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAIC_DMADV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMAIC/DMADV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Super_Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Super_Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lean_including_Kaizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lean (including Kaizen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Business_Unit__c</fullName>
        <inlineHelpText>The benefitting Business group/Functional Group for the Portfolio. The project details will NOT automatically be changed to the newly updated portfolio values.</inlineHelpText>
        <label>Portfolio Business Grp/Functional Grp</label>
        <picklist>
            <picklistValues>
                <fullName>Applications &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief innovation and Operating office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Strategy &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP/Optical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name_Unique__c</fullName>
        <label>Portfolio Name - Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portfolio_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Owner</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Portfolios (Portfolio Owner)</relationshipLabel>
        <relationshipName>Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Status__c</fullName>
        <label>Portfolio Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Type__c</fullName>
        <formula>RIGHT(RecordType.Name, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_EDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCA/EDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Market__c</fullName>
        <inlineHelpText>Read-only field determined by Customer Region</inlineHelpText>
        <label>Regional Market</label>
        <picklist>
            <controllingField>Customer_Region__c</controllingField>
            <picklistValues>
                <fullName>CO Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Asia, Middle East &amp; Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Europe &amp; Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8D</label>
        <type>Checkbox</type>
    </fields>
    <label>QIPP Portfolio</label>
    <listViews>
        <fullName>A3</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U000000016dE</value>
        </filters>
        <label>A3</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>Portfolio_Business_Unit__c</columns>
        <columns>Portfolio_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BLT</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Owner__c</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U000000017On</value>
        </filters>
        <label>BLT</label>
    </listViews>
    <listViews>
        <fullName>CDT</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIPP_Portfolio__c.Portfolio_CDT</value>
        </filters>
        <label>CDT</label>
    </listViews>
    <listViews>
        <fullName>CPQ</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U000000017Oo</value>
        </filters>
        <label>CPQ</label>
    </listViews>
    <listViews>
        <fullName>GBC</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U000000017Op</value>
        </filters>
        <label>GBC</label>
    </listViews>
    <listViews>
        <fullName>QPI</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U000000017Ot</value>
        </filters>
        <label>QPI</label>
    </listViews>
    <listViews>
        <fullName>STD</fullName>
        <columns>NAME</columns>
        <columns>Portfolio_Type__c</columns>
        <columns>Portfolio_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIPP_Portfolio__c.Portfolio_STD</value>
        </filters>
        <label>STD</label>
    </listViews>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <recordTypes>
        <fullName>Portfolio_CDT</fullName>
        <active>true</active>
        <description>Portfolio - CDT:  &quot;Customer Delight Team Projects&quot;</description>
        <label>Portfolio - CDT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portfolio_STD</fullName>
        <active>true</active>
        <description>Portfolio - STD:  Use this for any standard Portfolio (except CDT)</description>
        <label>Portfolio - STD</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validation_for_Percentage_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR
 (
OR( CPVi_Composite__c &gt; 1.0, CPVi_Composite__c &lt; 0.0 ),
OR( CPVi_Past__c &gt; 1.0,  CPVi_Past__c  &lt; 0.0 ),
OR( CPVi_Future__c &gt; 1.0,   CPVi_Future__c  &lt; 0.0 )
)</errorConditionFormula>
        <errorMessage>Percentage must be between 0 and 100%.</errorMessage>
    </validationRules>
</CustomObject>